# design-patterns

./: .clang-format  clang_format.sh
adapter/: Adapter.md  adapter.cpp  exercise.cpp
bridge/: bridge.cpp  exercise.cpp
builder/: Builder.md  builder.cpp  exercise.cpp  groovy_builder.cpp
chain_of_responsibility/: ChainOfResponsibility.md  broker_chain.cpp  exercise.cpp  pointer_chain.cpp
command/: Command.md  command.cpp  exercise.cpp
composite/: array_backed_properties.cpp  composite.cpp  exercise.cpp  neurons.cpp
decorator/: Decorator.md  dynamic_decorator.cpp  exercise.cpp  functional_decorator.cpp  static_decorator.cpp
facade/: Facade.md  facade.cpp
factory/: exercise.cpp  factory.cpp  factory_method.cpp  inner_factory.cpp
flyweight/: Flyweight.md  boost_flyweight.cpp  exercise.cpp  handmade_flyweight.cpp  text_formatting.cpp
interpreter/: Interpreter.md  exercise.cpp  interpreter.cpp
iterator/: Iterator.md  binary_tree_iterator.cpp  boost_iterator_facade.cpp  exercise.cpp  stl_iterator.cpp
mediator/: Iterator.md  event_broker.cpp  exercise.cpp
memento/: exercise.cpp  memento.cpp
observer/: Headers.hpp  Observable.hpp  Observer.hpp  SaferObservable.hpp  exercise.cpp  main.cpp
prototype/: CMakeLists.txt  exercise.cpp  prototype.cpp  prototype_factory.cpp  prototype_serialization.cpp
proxy/: Proxy.md  communication_proxy.cpp  exercise.cpp  property_proxy.cpp  smart_pointers.cpp  virtual_proxy.cpp
singleton/: Singleton.md  exercise.cpp  monostate.cpp  multiton.cpp  singleton.cpp
solid_design_principles/: SolidDesignPrinciples.md  (+5 more)
(+43 files in other folders)
